# d8s-dates

./: .travis.yml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug.md  bug_report.md  feature_request.md
.github/workflows/: lint.yaml  pytest.yml  python-publish.yml
d8s_dates/: __init__.py  dates_and_times.py
dates_and_times/: __init__.py  dates_and_times.py
dem_dates/: __init__.py  dem_dates.py  temp_utils.py
democritus_dates/: __init__.py  dates_and_times.py  dates_and_times_temp_utils.py  temp_utils.py
docker/: lint.sh
tests/: test_dates_and_times.py  test_dem_dates.py
