[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d8s_dates"
version = "0.8.0"
description = "Democritus functions for working with dates and times in Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU Lesser General Public License v3" }
authors = [{ name = "Floyd Hightower" }]
keywords = ["dates", "date", "datetime", "times", "time", "democritus", "utility", "utils", "datetime utility", "datetime utils"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "d8s-hypothesis>=0.6.0,<1.0",
    "d8s-timezones>=0.5.0,<1.0",
    "hypothesis>=6.0,<7.0",
    "maya>=0.6.1,<1.0",
    "parsedatetime>=2.6,<3.0",
    "python-dateutil>=2.9,<3.0",
    "d8s-strings>=0.5.0,<1.0",
    "d8s-math>=0.7.0,<1.0",
]

[project.urls]
Source = "https://github.com/democritus-project/d8s-dates"
Issues = "https://github.com/democritus-project/d8s-dates/issues"

[dependency-groups]
dev = [
    "codecov>=2.1.13,<3.0",
    "d8s-file-system>=0.10.0,<1.0",
    "d8s-python>=0.9.0,<1.0",
    "ipython>=8.18.0,<10.0",
    "mypy>=2.0,<3.0",
    "pytest>=9.0,<10.0",
    "pytest-cov>=7.0,<8.0",
    "ruff>=0.15.0,<0.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["d8s_dates"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"d8s_dates/__init__.py" = ["F401", "F403"]
"tests/*" = ["E501"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --cov=. --cov-report term-missing --cov-fail-under 96"
python_files = "tests/test_*.py"
